--- a/.gitignore
+++ b/.gitignore
@@ -5,5 +5,5 @@
 8_Node_js/Лр 8 вар 5/node_modules
 8_Node_js/Лр 8 вар 11/node_modules
 
-9_Mongo/Лр 9 вар 5/.idea
-9_Mongo/Лр 9 вар 5/node_modules
+9_Mongo/.idea
+9_Mongo/node_modules
